...
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<resources>
    <string name="mozilla" translatable="false">Mozilla</string>
    <string name="firefox" translatable="false">Firefox</string>
    <string name="mpl" translatable="false">Mozilla Public License</string>
    <!-- Label used for buttons, e.g. in dialogs -->
    <string name="action_cancel">CANCEL</string>
    <!-- Label used for buttons, e.g. in dialogs -->
    <string name="action_ok">OK</string>

    <!-- This text is shown in the URL bar when it's empty -->
    <string name="urlbar_hint">Search or enter address</string>
    <!-- If the user has a URL copied in his/her clipboard, the search bar will offer a button for users to visit the website by a single tap. -->
    <string name="awesomebar_open_copied_link">Open Copied Link</string>
    <!-- A search suggestion for users to tap and switch to the opened tab. -->
...
